--- a/public/dynamic-size.css
+++ b/public/dynamic-size.css
@@ -16,9 +16,7 @@
   }
 
   .logo {
-    height: 50px;
-    width: 75px;
-    transform: translateY(-20px);
+    transform: translateY(-30px);
   }
 
   .logo_name {
@@ -57,7 +55,6 @@
     padding-top: 40px;
   }
 
-  header .moon,
   header .profile {
     height: 5px;
   }
@@ -73,8 +70,8 @@
     margin-top: -15px;
   }
 
-  .nav_links .moon {
-    height: 15px;
+  .nav_links .moon  {
+    height: 20px;
   }
 
   .nav_links li .profile,
@@ -86,6 +83,7 @@
   .cart {
     font-size: 15px;
     padding: 2px 10px;
+    border-radius: 10px;
   }
 
   footer {
@@ -213,3 +211,5 @@
     padding: 0;
   }
 }
+
+
